--- a/index.html
+++ b/index.html
@@ -2,9 +2,235 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <title>Ono-tebe-nado</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
-</html>
+  <body>
+    <header class="header content-section">
+      <nav class="header__menu menu">
+        <!-- display-center - for blocks that need center postion -->
+        <ul class="header__links-list display-center text-style">
+          <!-- text-style - style for tex in header and footer -->
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#cover">
+              главная
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link link__underline" href="#lots">
+              <!-- link__underline - style for links with border-bottom -->
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link link__underline" href="#about">
+              об аукционе
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img class="header__logo-image" src="./images/logo.svg" alt="Логотип" />
+      </a>
+      <address class="address header__address">
+        <a
+          class="adress__style text-style link__underline"
+          href="tel:+99995555555"
+        >
+          +9 999 555 5555
+        </a>
+        <a
+          class="adress__style text-style link__underline"
+          href="mailto:info@sobaka.ge"
+        >
+          info@sobaka.ge
+        </a>
+        <p class="text-style">
+          наб. Принсенграхт 263-<br />
+          265, Амстердам
+        </p>
+      </address>
+    </header>
+    <main class="main content-section">
+      <section class="cover display-center" id="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text"> оно </span>
+            <span class="aligned-text_center"> тебе </span>
+            <span class="aligned-text_right"> надо </span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">
+              <span class="cover__description-text__whitespace-right">
+                Аукцион вещей,
+              </span>
+              <span class="cover__description-text__b"> в </span>
+              <span class="cover__description-text__whitespace-left">
+                которые никто
+              </span>
+              <span class="cover__description-text__after-whitespace">
+                не верил
+              </span>
+            </p>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots content-section" id="lots">
+        <h1 class="lots__heading">Лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <h1 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h1>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <h1 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h1>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <h1 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h1>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0"> посмотреть больше </a>
+      </section>
+      <section class="about content-section" id="about">
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип"
+          />
+        </div>
+        <h1 class="about__title">Об аукционе</h1>
+        <div class="about__text">
+          <p class="about__text-first-p">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text-second-p">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря <br />
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов
+            невозможно представить современную культуру. Когда в эти вещи не
+            верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer content-section">
+      <address class="footer__address address">
+        <a
+          class="adress__style text-style link__underline"
+          href="tel:+99995555555"
+        >
+          +9 999 555 5555
+        </a>
+        <a
+          class="adress__style text-style link__underline"
+          href="mailto:info@sobaka.ge"
+        >
+          info@sobaka.ge
+        </a>
+        <p class="text-style">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="footer__menu menu">
+        <ul class="footer__menu-list text-style">
+          <li class="footer__menu-list-item footer__menu-link_active">
+            <a
+              class="footer__menu-link footer__menu-link-active header__link_active"
+              href="#cover"
+            >
+              главная
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a
+              class="footer__menu-link footer__menu-link link__underline"
+              href="#lots"
+            >
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a
+              class="footer__menu-link footer__menu-link link__underline"
+              href="#about"
+            >
+              об аукционе
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <a class="socials">
+        <ul class="footer__social-list display-center">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"></a>
+            <img
+              class="footer__social-icon youtube"
+              src="/images/youtube.svg"
+              alt="youtube"
+            />
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"></a>
+            <img class="footer__social-icon vk" src="/images/vk.svg" alt="vk" />
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"></a>
+            <img
+              class="footer__social-icon pinterest"
+              src="/images/pinterest.svg"
+              alt="pinterest"
+            />
+          </li>
+        </ul>
+      </a>
+    </footer>
+  </body>
+</html> 
