--- a/index.html
+++ b/index.html
@@ -210,27 +210,33 @@
       <a class="socials">
         <ul class="footer__social-list display-center">
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0"></a>
+            <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon youtube"
               src="/images/youtube.svg"
               alt="youtube"
             />
+            </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0"></a>
-            <img class="footer__social-icon vk" src="/images/vk.svg" alt="vk" />
+            <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon vk"
+              src="/images/vk.svg"
+              alt="vk" />
+            </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0"></a>
+            <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon pinterest"
               src="/images/pinterest.svg"
               alt="pinterest"
             />
+          </a>
           </li>
         </ul>
       </a>
     </footer>
   </body>
-</html> 
+</html>
