--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ono-tebe-nado</title>
+    <title>Оно тебе надо</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -36,16 +36,10 @@
         <img class="header__logo-image" src="./images/logo.svg" alt="Логотип" />
       </a>
       <address class="address header__address">
-        <a
-          class="adress__style text-style link__underline"
-          href="tel:+99995555555"
-        >
+        <a class="adress__style text-style link__underline" href="tel:+99995555555">
           +9 999 555 5555
         </a>
-        <a
-          class="adress__style text-style link__underline"
-          href="mailto:info@sobaka.ge"
-        >
+        <a class="adress__style text-style link__underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
         <p class="text-style">
@@ -55,78 +49,64 @@
       </address>
     </header>
     <main class="main content-section">
-      <section class="cover display-center" id="cover">
-        <div class="overlay">
-          <h1 class="cover__title">
-            <span class="aligned-text"> оно </span>
-            <span class="aligned-text_center"> тебе </span>
-            <span class="aligned-text_right"> надо </span>
-          </h1>
-          <div class="cover__description">
-            <p class="cover__description-text">
-              <span class="cover__description-text__whitespace-right">
-                Аукцион вещей,
-              </span>
-              <span class="cover__description-text__b"> в </span>
-              <span class="cover__description-text__whitespace-left">
-                которые никто
-              </span>
-              <span class="cover__description-text__after-whitespace">
-                не верил
-              </span>
-            </p>
-            <button class="bet-button">Сделать ставку</button>
-          </div>
+      <section class="cover" id="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_left"> оно </span>
+          <span class="aligned-text aligned-text_center"> тебе </span>
+          <span class="aligned-text aligned-text_right"> надо </span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button" type="button">
+            Сделать ставку
+          </button>
         </div>
       </section>
       <section class="lots content-section" id="lots">
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">
+          Лоты
+        </h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card card_type_film">
-                <h1 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h1>
+                </h3>
                 <p class="card__text">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
                 </p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card card_type_book">
-                <h1 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h1>
+                </h3>
                 <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё
+                  накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
                 </p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card card_type_picture">
-                <h1 class="card__title">
+                <div class="overlay"></div>
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h1>
+                </h3>
                 <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ
+                  Кандинского?
                 </p>
               </article>
             </a>
@@ -136,107 +116,67 @@
       </section>
       <section class="about content-section" id="about">
         <div class="about__logo">
-          <img
-            class="about__logo-image"
-            src="./images/logo-white.svg"
-            alt="Логотип"
-          />
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип" />
         </div>
-        <h1 class="about__title">Об аукционе</h1>
+        <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
-          <p class="about__text-first-p">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может
+            нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
-          <p class="about__text-second-p">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br />
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов
-            невозможно представить современную культуру. Когда в эти вещи не
-            верил никто, продолжали верить их создатели. И сейчас эти лоты стали
-            культовыми.
+          <p class="about__text-special-style">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br />
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
     </main>
     <footer class="footer content-section">
       <address class="footer__address address">
-        <a
-          class="adress__style text-style link__underline"
-          href="tel:+99995555555"
-        >
+        <a class="adress__style text-style link__underline" href="tel:+99995555555">
           +9 999 555 5555
         </a>
-        <a
-          class="adress__style text-style link__underline"
-          href="mailto:info@sobaka.ge"
-        >
+        <a class="adress__style text-style link__underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
         <p class="text-style">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu menu">
         <ul class="footer__menu-list text-style">
-          <li class="footer__menu-list-item footer__menu-link_active">
-            <a
-              class="footer__menu-link footer__menu-link-active header__link_active"
-              href="#cover"
-            >
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#cover">
               главная
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a
-              class="footer__menu-link footer__menu-link link__underline"
-              href="#lots"
-            >
+            <a class="footer__menu-link footer__menu-link link__underline" href="#lots">
               посмотреть лоты
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a
-              class="footer__menu-link footer__menu-link link__underline"
-              href="#about"
-            >
+            <a class="footer__menu-link footer__menu-link link__underline" href="#about">
               об аукционе
             </a>
           </li>
         </ul>
       </nav>
-      <a class="socials">
-        <ul class="footer__social-list display-center">
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon youtube"
-              src="/images/youtube.svg"
-              alt="youtube"
-            />
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon vk"
-              src="/images/vk.svg"
-              alt="vk" />
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-            <img
-              class="footer__social-icon pinterest"
-              src="/images/pinterest.svg"
-              alt="pinterest"
-            />
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon youtube" src="./images/youtube.svg" alt="youtube" />
           </a>
-          </li>
-        </ul>
-      </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon vk" src="./images/vk.svg" alt="vk" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon pinterest" src="./images/pinterest.svg" alt="pinterest" />
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
