--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может
             нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
+          <!-- наставник говорил, что несоответствие с текстом можно оставить так. можно исправить при помощи непереносимого пробела, но текста может стать больше, а искать потом, где его задали, не удобно, поэтому оставила так, без переноса -->
           <p class="about__text-special-style">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
@@ -143,17 +144,17 @@
       <nav class="footer__menu menu">
         <ul class="footer__menu-list text-style">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#cover">
+            <a class="footer__menu-link footer__menu-link-active" href="#cover">
               главная
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link link__underline" href="#lots">
+            <a class="footer__menu-link link__underline" href="#lots">
               посмотреть лоты
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link link__underline" href="#about">
+            <a class="footer__menu-link link__underline" href="#about">
               об аукционе
             </a>
           </li>
